Putting a pertinent message

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Hello World</title>
     </head>
     <body>
+        <h3>Well, ain't that a kick in the head</h3>
     </body>
 </html>
